# webService

./: .env.example  .gitignore  README.md  design.md  todo.md
backend/: Cargo.toml
backend/migrations/: 20260709033858_init.sql
backend/src/: config.rs  main.rs  state.rs
backend/src/handlers/: handler.rs
backend/src/models/: user.rs
backend/src/routes/: route.rs
backend/src/utils/: jwt.rs  mod.rs  sql_request.rs  to_hash.rs
