[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
